Fix layout issues

--- a/assets/sass/components/photo.scss
+++ b/assets/sass/components/photo.scss
@@ -1,73 +1,6 @@
 @use '../variables' as *;
 @use '../every_layout/sidebar' as *;
-
-/*
-https://asciiflow.com/#/share/eJzNVs1qhDAQfpUw54WW0hXqobfCFpa1B4%2B5SJsWQd3F2q3Lsm%2FRx%2BnT%2BCR1TWuM5sdotDsEicnM980kM0mOkAQxATf5iKIFRMGBpODCEUOOwb1zlgsMh7J34zhlLyN5Vv5gKL6%2BjRpCyNRkBiiMk%2FK7WXnoaeX5HkIUm34bw0mwD9%2BCLNwmPaYpKOKktkJC0U8zUEZWW%2FmP%2FvpBDiqdntBTnpNZGW1zb1OjuLr6CpWqF5MsaIP3CkFJSlGlpKKIuAktgSaqF%2FL%2BnI4ioAj%2FF8EkBPIcI3n4apdOKJbArbRBjtB1Gh3G4ELr2TpM7V3otUlGze7O0GYLUJ0C%2FB0pT1mlMLXzJVYNie4mY7Tfu9d0dWVcbeaOau29XtUAlYvCGuo0vl6W6vgtF0gxqMIHVNcf4T4kn7ttmqF75FyTeLYC1zpY6MpfsGgaPYGB8kiwwlAXmHHKqPklyaqOUmjEHprjmZrRdo2qp1u4oyqTxiQxGsQ0gRF71NllsplgailmOai0p0TTpfSce%2BU5try6xXCC0w%2FOLB7k)
-
-+--------------+   +----------------------+   +----------------------+
-|NHO PHOTO     |   |NHO PHOTO  navigation |   |NHO PHOTO  navigation |
-|              |   |                      |   |                      |
-|    navigation|   |TITLE                 |   |TITLE                 |
-|              |   |                      |   |                      |
-|TITLE         |   | +------------+       |   | +-------+            |
-|              |   | |            |       |   | |       |  meta      |
-| +----------+ |   | |            | meta  |   | |       |            |
-| |          | |   | |            |       |   | |       |  descr     |
-| |          | |   | |            | descr |   | |       |            |
-| |          | |   | |            |       |   | |       |            |
-| |          | |   | |            |       |   | +-------+  exif      |
-| |          | |   | |            |       |   |                      |
-| |          | |   | |            |       |   +----------------------+
-| |          | |   | |            | exif  |
-| |          | |   | |            |       |         ratio > 5/4
-| +----------+ |   | +------------+       |
-|              |   |                      |
-+--------------+   +----------------------+
-
-
-+------------------------------+
-|NHO PHOTO                     |
-|                              |
-| navi     TITLE               |
-|                              |
-| gation    +-------------+    |
-|           |             |    |
-| navi      |             |    |
-|           |             |    |
-| gation    |             |    |
-|           |             |    |
-| navi      |             |    |
-|           |             |    |
-|           |             |    |
-|           |             |    |
-|           |             |    |
-|           +-------------+    |
-|                              |
-+------------------------------+
-        viewport > 60em
-
-
-+----------------------------------------+
-|NHO PHOTO                               |
-|                                        |
-| navi     TITLE                         |
-|                                        |
-| gation   +-------------+               |
-|          |             |               |
-| navi     |             |  meta         |
-|          |             |               |
-| gation   |             |  description  |
-|          |             |               |
-| navi     |             |               |
-|          |             |               |
-|          |             |               |
-|          |             |  exif         |
-|          |             |               |
-|          +-------------+               |
-|                                        |
-+----------------------------------------+
-            ratio > 5/4
- */
+@use '../every_layout/switcher' as *;
 
 .photo {
   --width: 100%;
@@ -201,71 +134,40 @@ https://asciiflow.com/#/share/eJzNVs1qhDAQfpUw54WW0hXqobfCFpa1B4%2B5SJsWQd3F2q3L
 }
 
 .meta {
-  @extend %sidebar;
-
   grid-area: meta;
   align-self: start;
-  justify-self: start;
-}
+  justify-self: stretch;
+  width: 100%;
+  max-width: 45rem;
 
-.exif {
-  list-style-type: none;
-  margin-block-start: 0;
-  margin-block-end: 0;
-  padding-inline-start: 0;
-  font-size: var(--step--1);
+  --sidebar-basis: 18rem;
+  @extend %sidebar;
+  align-items: flex-start;
 
-  display: grid;
-  gap: var(--space-xs);
-  grid-template-areas:
-    'date date date'
-    'gear gear gear'
-    'lens lens lens'
-    'iso aperture exposure'
-    'geo geo geo';
+  .exif {
+    list-style-type: none;
 
-  @media (min-width: $breakpoint-s) and (max-width: $breakpoint-l) {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 0;
+
+    font-size: var(--step--1);
+
     width: 100%;
+    max-width: 20rem;
 
-    grid-template-areas:
-      'date date date geo'
-      'gear gear gear geo'
-      'lens lens lens geo'
-      'iso aperture exposure geo'
-      '. . . geo';
+    display: grid;
+    gap: var(--space-xs);
+    grid-template-columns: 1fr 1fr 1fr;
 
-    .geo {
-      justify-self: end;
+    .date,
+    .gear,
+    .lens {
+      grid-column: 1 / -1;
     }
   }
 
-  .date {
-    grid-area: date;
-  }
-
-  .gear {
-    grid-area: gear;
-  }
-
-  .lens {
-    grid-area: lens;
-  }
-
-  .iso {
-    grid-area: iso;
-  }
-
-  .aperture {
-    grid-area: aperture;
-  }
-
-  .exposure {
-    grid-area: exposure;
-  }
-
   .geo {
-    grid-area: geo;
-
     p {
       margin-block-start: 0;
       margin-block-end: 0;
@@ -275,21 +177,21 @@ https://asciiflow.com/#/share/eJzNVs1qhDAQfpUw54WW0hXqobfCFpa1B4%2B5SJsWQd3F2q3L
 
 #map {
   aspect-ratio: 3/2;
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  max-width: 20rem;
+  height: auto;
 
   background-color: black;
   padding: 1px;
   border: 1px solid white;
 
-  img {
+  img,
+  canvas {
     border: none;
     background-color: transparent;
-    padding: 1px;
 
-    width: 298;
-    max-width: 100%;
-    height: 198px;
+    width: 100% !important;
+    height: auto !important;
   }
 
   .marker {
